--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,14 @@ android {
 
     defaultConfig {
         applicationId "com.example.popularmovies"
-        minSdkVersion 16
+        minSdkVersion 15
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        android.defaultConfig.vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -25,6 +27,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
 
     }
+
+
+//    dataBinding {
+//        enabled = true
+//    }
 }
 
 dependencies {
