--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.popularmovies">
+    package="com.example.popularmovies2">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,7 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MovieDetails"></activity>
+        <activity android:name=".userfavorites.UserFavorite"/>
+
+        <provider
+            android:name=".moviedata.MovieProvider"
+            android:authorities="@string/content_authority"
+            android:exported="false" />
+
+        <activity android:name=".userfavorites.UserFavorites" />
+        <activity android:name=".MovieDetails" />
+        <activity android:name=".relatedmovies.RelatedMoviesList"/>
+        <activity android:name=".relatedmovies.RelatedMoviesDetails"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
